Use LegView in front end instead of SegmentView